--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Harpers Ferry (W. Va.) -- History'
 - !lcc 'F206'
 - !lcsh 'Harpers Ferry (W. Va.) -- History -- John Brown''s Raid, 1859'
+- GITenberg
 title: The Strange Story of Harper's Ferry, with Legends of the Surrounding Country
 url: http://www.gutenberg.org/ebooks/35459
